[package]
name = "wellness_plugin"
version = "0.1.0"
edition = "2021"
authors = ["alexanderdaily <alexanderdaily001@gmail.com>"]

[lib]
# You could also use Rust's unstable ABI with "dylib".
crate-type = ["cdylib"]

[dependencies]
mail-parser = "0.8.2"
rhai = { version = "1.11" }
rhai-dylib = "0.1.6"
zip-extract = "0.1.2"
